--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,13 +239,19 @@ endif()
 source_group(TREE ${GENERATORS_ROOT} FILES ${generator_srcs})
 
 if(USE_VCPKG)
+set(ONNXRUNTIME_GENAI_PUBLIC_HEADERS
+  "${PROJECT_SOURCE_DIR}/src/ort_genai_c.h;${PROJECT_SOURCE_DIR}/src/ort_genai.h"
+)
+
+target_sources(onnxruntime-genai-static PUBLIC FILE_SET HEADERS BASE_DIRS ${PROJECT_SOURCE_DIR}/src FILES ${ONNXRUNTIME_GENAI_PUBLIC_HEADERS})
+
 install(TARGETS
   onnxruntime-genai-static
   EXPORT onnxruntime_genaiTargets
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib
   ARCHIVE DESTINATION lib
-  PUBLIC_HEADER DESTINATION include
+  FILE_SET HEADERS DESTINATION include
   FRAMEWORK DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
   file (STRINGS "${PROJECT_SOURCE_DIR}/VERSION_INFO" ORT_GENAI_VERSION)
