--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,9 +239,7 @@ endif()
 source_group(TREE ${GENERATORS_ROOT} FILES ${generator_srcs})
 
 if(USE_VCPKG)
-set(ONNXRUNTIME_GENAI_PUBLIC_HEADERS
-  "${PROJECT_SOURCE_DIR}/src/ort_genai_c.h;${PROJECT_SOURCE_DIR}/src/ort_genai.h"
-)
+file(GLOB ONNXRUNTIME_GENAI_PUBLIC_HEADERS "src/*.h" "src/models/*.h")
 
 target_sources(onnxruntime-genai-static PUBLIC FILE_SET HEADERS BASE_DIRS ${PROJECT_SOURCE_DIR}/src FILES ${ONNXRUNTIME_GENAI_PUBLIC_HEADERS})
 
@@ -251,7 +249,7 @@ install(TARGETS
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib
   ARCHIVE DESTINATION lib
-  FILE_SET HEADERS DESTINATION include
+  FILE_SET HEADERS DESTINATION include/onnxruntime_genai
   FRAMEWORK DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
   file (STRINGS "${PROJECT_SOURCE_DIR}/VERSION_INFO" ORT_GENAI_VERSION)
