--- a/examples/slm_engine/src/cpp/CMakeLists.txt
+++ b/examples/slm_engine/src/cpp/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(
     slmengine
+    SHARED
     slm_engine.cpp
     input_decoder.cpp
 )
@@ -19,5 +20,14 @@ target_link_libraries(slm-runner slmengine ort-genai ort)
 add_executable(slm-server slm_server.cpp)
 target_link_libraries(slm-server slmengine ort-genai ort)
     
+install(DIRECTORY ${ARTIFACTS}/${SYS_TARGET_ID}/include
+    DESTINATION .
+    FILES_MATCHING PATTERN "*.h"
+)
+
+install(FILES slm_engine.h DESTINATION include)
+install(FILES input_decoder.h DESTINATION include)
+
+install(TARGETS slmengine DESTINATION bin)
 install(TARGETS slm-runner DESTINATION bin)
 install(TARGETS slm-server DESTINATION bin)
