Added a new function 'generate()' to enable passing formatted text and getting the SLM output without JSON API

--- a/examples/slm_engine/build_scripts/Dockerfile.Linux
+++ b/examples/slm_engine/build_scripts/Dockerfile.Linux
@@ -15,6 +15,7 @@ RUN apt-get update && apt-get install -y \
     git \
     git-lfs \
     build-essential \
+    ninja-build \
     && apt-get clean
 
 # Install Python packages
