--- a/.github/workflows/linux-cpu-x64-nightly-examples.yml
+++ b/.github/workflows/linux-cpu-x64-nightly-examples.yml
@@ -1,12 +1,12 @@
 name: "Linux CPU x64 Nightly Examples Build"
 
-# Run at 5:00 AM UTC every day
-# 9:00 PM PST
-
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 5 * * *"
+  push:
+    branches:
+    - main
+    - rel-*
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
