Add Phi-4 multimodal to ONNX Runtime GenAI (#1281)
### Description

This PR adds [Microsoft's Phi-4
multimodal](https://huggingface.co/microsoft/Phi-4-multimodal-instruct)
model to ONNX Runtime GenAI.

### Motivation and Context

"Phi-4-multimodal-instruct is a lightweight open multimodal foundation
model that leverages the language, vision, and speech research and
datasets used for Phi-3.5 and 4.0 models." --Microsoft

---------

Co-authored-by: Baiju Meswani <bmeswani@microsoft.com>
Co-authored-by: Ryan Hill <38674843+RyanUnderhill@users.noreply.github.com>
Co-authored-by: Abhishek Jindal <abjindal@microsoft.com>

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -7,7 +7,8 @@ option(USE_CUDA "Build with CUDA support" OFF)
 option(USE_CXX "Invoke the C++ example" ON)
 option(PHI3 "Build the Phi example" OFF)
 option(PHI3_QA "Build the Phi Q&A example without multi-turn prompting" OFF)
-option(PHI3V "Build the Phi3v example" OFF)
+option(PHI3V "Build the Phi-3 vision example" OFF)
+option(PHI4-MM "Build the Phi-4 mm example" OFF)
 option(WHISPER "Build the Whisper example" OFF)
 
 if(USE_CXX)
@@ -72,6 +73,11 @@ endif()
 if(PHI3V)
   add_executable(phi3v ${EXAMPLES_SOURCE_DIR}/phi3v.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(phi3v)
+endif()
+
+if(PHI4-MM)
+  add_executable(phi4-mm ${CMAKE_SOURCE_DIR}/src/phi4-mm.cpp)
+  prepare_executable(phi4-mm)
 endif()
 
 if(WHISPER)
