Made the following changes: 1. Removed the model family option as it's now auto detected from the ONNX model directory 2. Added support for google test and added a few tests

--- a/examples/slm_engine/src/cpp/CMakeLists.txt
+++ b/examples/slm_engine/src/cpp/CMakeLists.txt
@@ -8,11 +8,20 @@ add_library(
 
 target_link_libraries(slmengine ort-genai ort)
 
-add_executable(unit-test input_decoder.cpp input_decoder_test.cpp)
-target_link_libraries(unit-test GTest::gtest)
+add_executable(input_decoder-test input_decoder.cpp input_decoder_test.cpp)
+target_link_libraries(input_decoder-test GTest::gtest)
 
-add_executable(googletest gtest_main.cpp)
-target_link_libraries(googletest GTest::gtest)
+add_executable(
+    unit-test 
+    slm_engine_test.cpp
+    gtest_main.cpp
+
+)
+target_link_libraries(
+    unit-test  
+    slmengine 
+    GTest::gtest
+)
 
 add_executable(slm-runner slm_runner.cpp)
 target_link_libraries(slm-runner slmengine ort-genai ort)
@@ -31,3 +40,4 @@ install(FILES input_decoder.h DESTINATION include)
 install(TARGETS slmengine DESTINATION bin)
 install(TARGETS slm-runner DESTINATION bin)
 install(TARGETS slm-server DESTINATION bin)
+install(TARGETS unit-test DESTINATION bin)
