Change PublishBuildArtifact to pipelineArtifact

--- a/.pipelines/stages/jobs/custom-nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/custom-nuget-packaging-job.yml
@@ -131,9 +131,9 @@ jobs:
       FolderPath: '$(Build.ArtifactStagingDirectory)\nuget'
       DoEsrp: 'true'
 
-  - task: PublishBuildArtifacts@1
-    displayName: 'Publish Artifact: ONNXRuntime Genai NuGet'
-    inputs:
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)\nuget'
-      ArtifactName: $(genai_nuget_package_name)
+  - job: Nuget_Packaging
+    outputs:
+    - output: pipelineArtifact
+      path: '$(Build.ArtifactStagingDirectory)\nuget'
+      artifact: $(genai_nuget_package_name)
       
