--- a/.pipelines/stages/jobs/android-java-api-aar.yml
+++ b/.pipelines/stages/jobs/android-java-api-aar.yml
@@ -55,7 +55,7 @@ jobs:
         cp ${BASE_PATH}/${PACKAGE_NAME}-${GENAI_VERSION}.pom          $ARTIFACTS_DIR
       workingDirectory: $(Build.SourcesDirectory)
 
-  - task: PublishBuildArtifacts@1
+  - task: pipelineArtifact
     inputs:
       pathtoPublish: $(Build.ArtifactStagingDirectory)
       artifactName: drop-android
