--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -107,7 +107,7 @@ steps:
     displayName: 'Package C/C++ API'
     workingDirectory: '$(Build.Repository.LocalPath)'
 
-  - task: PublishBuildArtifacts@1
+  - task: pipelineArtifact
     displayName: 'Publish Artifact: ONNXRuntime Genai capi'
     inputs:
       ArtifactName: $(artifactName)-capi
@@ -163,7 +163,7 @@ steps:
       Contents: '*manylinux*.whl'
       TargetFolder: '$(Build.ArtifactStagingDirectory)/wheel'
 
-  - task: PublishBuildArtifacts@1
+  - task: pipelineArtifact
     displayName: 'Publish Artifact: ONNXRuntime python wheel'
     inputs:
       ArtifactName: $(artifactName)-wheel
