--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -85,7 +85,7 @@ steps:
     displayName: 'Package C/C++ API'
     workingDirectory: '$(Build.Repository.LocalPath)'
 
-  - task: PublishBuildArtifacts@1
+  - task: pipelineArtifact
     displayName: 'Publish Artifact: ONNXRuntime Genai capi'
     inputs:
       ArtifactName: $(artifactName)-capi
@@ -124,7 +124,7 @@ steps:
       Contents: '*.whl'
       TargetFolder: '$(Build.ArtifactStagingDirectory)\wheel'
 
-  - task: PublishBuildArtifacts@1
+  - task: pipelineArtifact
     displayName: 'Publish Artifact: ONNXRuntime python wheel'
     inputs:
       ArtifactName: $(artifactName)-wheel
