--- a/.pipelines/stages/jobs/steps/capi-appleframework-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-appleframework-step.yml
@@ -37,7 +37,7 @@ steps:
   displayName: 'Build Apple XCFramework'
   workingDirectory: '$(Build.Repository.LocalPath)'
 
-- task: PublishBuildArtifacts@1
+- task: pipelineArtifact
   displayName: 'Publish Artifact: ONNXRuntime GenAI XCFramework'
   inputs:
     ArtifactName: onnxruntime-genai-ios-xcframework
