--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -107,11 +107,11 @@ steps:
     displayName: 'Package C/C++ API'
     workingDirectory: '$(Build.Repository.LocalPath)'
 
-  - task: pipelineArtifact
+  - task: CopyFiles@2
     displayName: 'Publish Artifact: ONNXRuntime Genai capi'
     inputs:
-      ArtifactName: $(artifactName)-capi
-      PathtoPublish: '$(Build.Repository.LocalPath)/build/$(ep)/package'
+      TargetFolder: $(artifactName)-capi
+      SourceFolder: '$(Build.Repository.LocalPath)/build/$(ep)/package'
 
 - ${{ if eq(parameters.target, 'python') }}:
   - bash: |
@@ -163,11 +163,11 @@ steps:
       Contents: '*manylinux*.whl'
       TargetFolder: '$(Build.ArtifactStagingDirectory)/wheel'
 
-  - task: pipelineArtifact
+  - task: CopyFiles@2
     displayName: 'Publish Artifact: ONNXRuntime python wheel'
     inputs:
-      ArtifactName: $(artifactName)-wheel
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)/wheel'
+      TargetFolder: $(artifactName)-wheel
+      SourceFolder: '$(Build.ArtifactStagingDirectory)/wheel'
 
 - script: |
     ls $(Build.Repository.LocalPath) -R
