--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -85,11 +85,11 @@ steps:
     displayName: 'Package C/C++ API'
     workingDirectory: '$(Build.Repository.LocalPath)'
 
-  - task: pipelineArtifact
+  - task: CopyFiles@2
     displayName: 'Publish Artifact: ONNXRuntime Genai capi'
     inputs:
-      ArtifactName: $(artifactName)-capi
-      PathtoPublish: '$(Build.Repository.LocalPath)\build\$(ep)\$(os)-$(arch)\package'
+      TargetFolder: $(artifactName)-capi
+      SourceFolder: '$(Build.Repository.LocalPath)\build\$(ep)\$(os)-$(arch)\package'
 
 - ${{ if eq(parameters.target, 'python') }}:
   - task: BinSkim@4
@@ -124,11 +124,12 @@ steps:
       Contents: '*.whl'
       TargetFolder: '$(Build.ArtifactStagingDirectory)\wheel'
 
-  - task: pipelineArtifact
+  - task: CopyFiles@2
     displayName: 'Publish Artifact: ONNXRuntime python wheel'
     inputs:
-      ArtifactName: $(artifactName)-wheel
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)\wheel'
+      TargetFolder: $(artifactName)-wheel
+      Contents: "**"
+      SourceFolder: '$(Build.ArtifactStagingDirectory)\wheel'
 
   - task: PublishSymbols@2
     displayName: 'Publish Build Symbols'
