--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -85,10 +85,13 @@ steps:
     displayName: 'Package C/C++ API'
     workingDirectory: '$(Build.Repository.LocalPath)'
 
-  - output: pipelineArtifact
-    displayName: 'Publish Artifact: ONNXRuntime Genai capi'
-    artifact: $(artifactName)-capi
-    path: '$(Build.Repository.LocalPath)\build\$(ep)\$(os)-$(arch)\package'
+jobs:
+- job: 'Publish Artifact: ONNXRuntime Genai capi'
+  templateContext:
+    outputs:
+    - output: pipelineArtifact
+      artifact: $(artifactName)-capi
+      path: '$(Build.Repository.LocalPath)\build\$(ep)\$(os)-$(arch)\package'
 
 - ${{ if eq(parameters.target, 'python') }}:
   - task: BinSkim@4
