--- a/.pipelines/stages/jobs/custom-nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/custom-nuget-packaging-job.yml
@@ -131,8 +131,8 @@ jobs:
       FolderPath: '$(Build.ArtifactStagingDirectory)\nuget'
       DoEsrp: 'true'
 
-  - task: CopyFiles@2
+  - task: 1ES.PublishPipelineArtifact@1
     inputs:
-      SourceFolder: '$(Build.ArtifactStagingDirectory)\nuget'
-      TargetFolder: $(genai_nuget_package_name)
+      targetPath: '$(Build.ArtifactStagingDirectory)\nuget'
+      artifactName: $(genai_nuget_package_name)
       
