--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -107,11 +107,11 @@ steps:
     displayName: 'Package C/C++ API'
     workingDirectory: '$(Build.Repository.LocalPath)'
 
-  - task: CopyFiles@2
+  - task: 1ES.PublishPipelineArtifact@1
     displayName: 'Publish Artifact: ONNXRuntime Genai capi'
     inputs:
-      TargetFolder: $(artifactName)-capi
-      SourceFolder: '$(Build.Repository.LocalPath)/build/$(ep)/package'
+      artifactName: $(artifactName)-capi
+      targetPath: '$(Build.Repository.LocalPath)/build/$(ep)/package'
 
 - ${{ if eq(parameters.target, 'python') }}:
   - bash: |
@@ -163,11 +163,11 @@ steps:
       Contents: '*manylinux*.whl'
       TargetFolder: '$(Build.ArtifactStagingDirectory)/wheel'
 
-  - task: CopyFiles@2
+  - task: 1ES.PublishPipelineArtifact@1
     displayName: 'Publish Artifact: ONNXRuntime python wheel'
     inputs:
-      TargetFolder: $(artifactName)-wheel
-      SourceFolder: '$(Build.ArtifactStagingDirectory)/wheel'
+      artifactName: $(artifactName)-wheel
+      targetPath: '$(Build.ArtifactStagingDirectory)/wheel'
 
 - script: |
     ls $(Build.Repository.LocalPath) -R
