--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -50,11 +50,11 @@ steps:
     displayName: 'Package C/C++ API'
     workingDirectory: '$(Build.Repository.LocalPath)'
 
-  - task: CopyFiles@2
+  - task: 1ES.PublishPipelineArtifact@1
     displayName: 'Publish Artifact: ONNXRuntime Genai capi'
     inputs:
-      TargetFolder: $(artifactName)-capi
-      SourceFolder: '$(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package'
+      artifactName: $(artifactName)-capi
+      targetPath: '$(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package'
 
 - ${{ if eq(parameters.target, 'python') }}:
   - powershell: |
@@ -87,8 +87,8 @@ steps:
       Contents: '*.whl'
       TargetFolder: '$(Build.ArtifactStagingDirectory)/wheel'
 
-  - task: CopyFiles@2
+  - task: 1ES.PublishPipelineArtifact@1
     displayName: 'Publish Artifact: ONNXRuntime python wheel'
     inputs:
-      TargetFolder: $(artifactName)-wheel
-      SourceFolder: '$(Build.ArtifactStagingDirectory)/wheel'
+      artifactName: $(artifactName)-wheel
+      targetPath: '$(Build.ArtifactStagingDirectory)/wheel'
