--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -121,6 +121,10 @@ extends:
     pool:
       name: 'onnxruntime-Win-CPU-2022'  # Name of your hosted pool
       os: windows  # OS of the image. This value cannot be a variable. Allowed values: windows, linux, macOS
+    sdl:
+      sourceRepositoriesToScan:
+        include:
+        - repository: manylinux
     stages:
     - template: stages/capi-packaging-stage.yml
       parameters:
