--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -125,6 +125,9 @@ extends:
       sourceRepositoriesToScan:
         include:
         - repository: manylinux
+      sourceAnalysisPool:
+        name: onnxruntime-Win-CPU-2022
+        os: windows
     stages:
     - template: stages/capi-packaging-stage.yml
       parameters:
