update os and test

--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -127,7 +127,7 @@ extends:
         - repository: manylinux
       sourceAnalysisPool:
         name: onnxruntime-Win-CPU-2022
-        os: windows
+        os: linux
     stages:
     - template: stages/capi-packaging-stage.yml
       parameters:
