Update macOS image

--- a/.pipelines/stages/jobs/capi-packaging-job.yml
+++ b/.pipelines/stages/jobs/capi-packaging-job.yml
@@ -44,7 +44,7 @@ jobs:
   ${{ if or(eq(parameters.os, 'osx'), eq(parameters.os, 'ios')) }}:
     pool:
       name: 'Azure Pipelines'
-      # name: 'macOS-latest'
+      image: 'macOS-latest'
       os: 'macOS'
 
   timeoutInMinutes: 180
