Update linux image

--- a/.pipelines/stages/jobs/android-java-api-aar.yml
+++ b/.pipelines/stages/jobs/android-java-api-aar.yml
@@ -16,7 +16,9 @@ jobs:
   workspace:
     clean: all
   #pool: 'ubuntu-latest'
-  pool: onnxruntime-Ubuntu2204-AMD-CPU
+  pool:
+    name: 'onnxruntime-Ubuntu2204-AMD-CPU'
+    os: linux
 
 
   steps:
