--- a/.pipelines/stages/jobs/macos-ios-cocoapods-packaging-job.yml
+++ b/.pipelines/stages/jobs/macos-ios-cocoapods-packaging-job.yml
@@ -7,7 +7,9 @@ parameters:
 jobs:
 - job: macos_ios_cocoapods_packaging
   pool:
-    vmImage: 'macOS-latest'
+    name: 'Azure Pipelines'
+    image: 'macOS-latest'
+    os: 'macOS'
   variables:
     buildSettingsFile: "tools/ci_build/github/apple/default_full_apple_framework_build_settings.json"
     cPodName: onnxruntime-genai-c
