--- a/.pipelines/stages/jobs/macos-ios-cocoapods-packaging-job.yml
+++ b/.pipelines/stages/jobs/macos-ios-cocoapods-packaging-job.yml
@@ -65,6 +65,8 @@ jobs:
         ls -R "$(Build.ArtifactStagingDirectory)"
       displayName: "List staged artifacts"
 
-    - publish: "$(Build.ArtifactStagingDirectory)"
-      artifact: "macos_ios_cocoapods_packaging_artifacts"
+    - task: 1ES.PublishPipelineArtifact@1
       displayName: "Publish artifacts"
+      inputs:
+        targetPath: "$(Build.ArtifactStagingDirectory)"
+        artifactName: "macos_ios_cocoapods_packaging_artifacts"
