add python nodot version for wheels in python publishing pipeline

--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -127,7 +127,7 @@ steps:
   - task: 1ES.PublishPipelineArtifact@1
     displayName: 'Publish Artifact: ONNXRuntime python wheel'
     inputs:
-      artifactName: $(artifactName)-wheel
+      artifactName: $(artifactName)-$(PyNoDotVer)-wheel
       targetPath: '$(Build.ArtifactStagingDirectory)\wheel'
 
   - task: PublishSymbols@2
