--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -160,7 +160,7 @@ steps:
   - task: 1ES.PublishPipelineArtifact@1
     displayName: 'Publish Artifact: ONNXRuntime python wheel'
     inputs:
-      artifactName: $(artifactName)-wheel
+      artifactName: $(artifactName)-$(PyNoDotVer)-wheel
       targetPath: '$(Build.ArtifactStagingDirectory)/wheel'
 
 - script: |
