Update Pipelines for S360 (#1323)
Apply 1ES standards to the release pipelines (part of S360 item). These
are the pipelines which were modified:

1. genai-nuget-publishing
2. genai-python-publishing
3. GenAI macOS iOS Packaging Pipeline
4. Genai Android Packaging Pipeline

More details can be found on the [work
item](https://aiinfra.visualstudio.com/ONNX%20Runtime/_workitems/edit/57254).

---------

Co-authored-by: Jian Chen <cjian@microsoft.com>

--- a/.pipelines/stages/jobs/steps/capi-appleframework-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-appleframework-step.yml
@@ -37,8 +37,8 @@ steps:
   displayName: 'Build Apple XCFramework'
   workingDirectory: '$(Build.Repository.LocalPath)'
 
-- task: PublishBuildArtifacts@1
+- task: 1ES.PublishPipelineArtifact@1
   displayName: 'Publish Artifact: ONNXRuntime GenAI XCFramework'
   inputs:
-    ArtifactName: onnxruntime-genai-ios-xcframework
-    PathtoPublish: '$(Build.BinariesDirectory)/artifacts'
+    artifactName: onnxruntime-genai-ios-xcframework
+    targetPath: '$(Build.BinariesDirectory)/artifacts'
