--- a/.pipelines/stages/jobs/steps/capi-appleframework-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-appleframework-step.yml
@@ -31,7 +31,7 @@ steps:
     cp -R $(Build.BinariesDirectory)/apple_framework/framework_out/onnxruntime-genai.xcframework \
           $(Build.BinariesDirectory)/artifacts_staging/
     pushd $(Build.BinariesDirectory)/artifacts_staging
-    zip -vr $(Build.BinariesDirectory)/artifacts/onnxruntime-genai-ios-$(genai_version).zip \
+    zip --symlinks -vr $(Build.BinariesDirectory)/artifacts/onnxruntime-genai-ios-$(genai_version).zip \
           onnxruntime-genai.xcframework
     popd
   displayName: 'Build Apple XCFramework'
