--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -89,8 +89,10 @@ if(BUILD_WHEEL)
   endforeach()
 
   # On Linux we need this so the python bindings can load our other shared libraries in the same folder
-  if(CMAKE_SYSTEM_NAME STREQUAL "Linux" OR CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+  if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set_target_properties(python PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE INSTALL_RPATH "$ORIGIN")
+  elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")  # For macOS
+    set_target_properties(python PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE INSTALL_RPATH "@executable_path")
   endif()
 
   if(MANYLINUX)
